# android-dstu8845

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/me/dummyco/dstu8845/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.c  strumok.c  strumok.h
app/src/main/java/me/dummyco/dstu8845/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/me/dummyco/dstu8845/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
